fix: increased graph line contrast (#3)

--- a/theme.less
+++ b/theme.less
@@ -1,4 +1,4 @@
-/* obsidian-material-ocean v0.4.1
+/* obsidian-material-ocean v0.4.2
    by @dragonwocky */
 
 // build: npx less theme.less > theme.css
@@ -102,6 +102,7 @@ body.is-mobile.theme-dark {
   --scrollbar-thumb-bg: #00010a;
   --scrollbar-active-thumb-bg: var(--color-accent);
 
+  --graph-line: var(--color-base-30);
   --interactive-normal: var(--color-base-30);
   --background-modifier-hover: var(--color-base-35);
   --table-header-background: var(--background-modifier-hover);
